try other sed command to remove document beginning; add build hash to PDF

--- a/docs/pdf_cover.tex
+++ b/docs/pdf_cover.tex
@@ -23,5 +23,7 @@
     This work is published from: Germany.
 
     \includegraphics[width=2cm]{docs/cc-zero}
-    
+
+    Build version: \texttt{0a25343}
+ 
 \end{titlepage}
