add pdf link to website

--- a/docs/pdf_cover.tex
+++ b/docs/pdf_cover.tex
@@ -24,6 +24,6 @@
 
     \includegraphics[width=2cm]{docs/cc-zero}
 
-    Build version: \texttt{0a25343}
+    Build version: \texttt{___VCS_REF___}
  
 \end{titlepage}
