use placeholder that does not need escaping by latex

--- a/docs/pdf_cover.tex
+++ b/docs/pdf_cover.tex
@@ -24,6 +24,6 @@
 
     \includegraphics[width=2cm]{docs/cc-zero}
 
-    Build version: \texttt{___VCS_REF___}
+    Build version: \texttt{@@VCSREF@@}
  
 \end{titlepage}
