--- a/docs/pdf_cover.tex
+++ b/docs/pdf_cover.tex
@@ -8,7 +8,7 @@
 
     The \textbf{normative version} is available in Markdown format in the online repository at \url{https://github.com/o2r-project/erc-spec/}.
 
-    This specification and guides are developed by the members of the DFG-funded project Opening Reproducible Research, \url{http://o2r.info}.
+    This specification and guides are developed by the members of the DFG-funded project Opening Reproducible Research, \url{https://o2r.info}.
 
     \vspace{1cm}
     \begin{center}
