update pdf make target for travis

--- a/docs/pdf_cover.tex
+++ b/docs/pdf_cover.tex
@@ -24,6 +24,6 @@
 
     \includegraphics[width=2cm]{docs/cc-zero}
 
-    Build version: \texttt{@@VCSREF@@}
+    Build version: \texttt{c2081e4}
  
 \end{titlepage}
