try to fix image path for pdf rendering

--- a/docs/pdf_cover.tex
+++ b/docs/pdf_cover.tex
@@ -12,7 +12,7 @@
 
     \vspace{1cm}
     \begin{center}
-        \includegraphics[width=8cm]{docs/o2r-logo}
+        \includegraphics[width=8cm]{docs/img/o2r-logo}
     \end{center}
     \vspace{3cm}
 
